Se agrega una caracteristica para el action en el form

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                 </form>
 <!--  -------------------------------fin del segundo formulario-------------------------------- -->
 
-                <form class="form form-3" action="">
+                <form class="form form-3" action="javascript:void(0);">
                   <label>
                     <span class="span-input">Ciudad</span>
                     <div class="select-container">
