Se agregan mejoras a los inputs de email, celular y al estado de error

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 <!-- --------------------------Inicio del primer form ------------------------- -->
                 <form class="form form-1" action="">
                     <label>
-                      <span class="span-input">Nombre y Apellido</span>
+                      <span class="span-input">Nombres y Apellidos</span>
                         <input
                           class="input-data input-name"
                           type="text" name="username"
@@ -293,7 +293,7 @@
                     <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Nombre y Apellido de la Referencia Personal</span>
+                    <span class="span-input">Nombres y Apellidos de la Referencia Personal</span>
                       <input
                         class="input-data input-name-ref"
                         type="text" name="username"
