Se prueba el autocapitalize en los inputs

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         <input
                           class="input-data input-name"
                           type="text" name="username"
-                          autocomplete="off">
+                          autocomplete="off" autocapitalize="words">
                         <p class="err-space err"></p>
                     </label>
                     <label>
