Se capitalizan todos los campos con el atributo autocapitalize de los inputs

--- a/index.html
+++ b/index.html
@@ -240,12 +240,14 @@
                       <span class="span-input">Lugar de Trabajo</span>
                         <input
                           type="text"
-                          class="input-data input-trabajo">
+                          class="input-data input-trabajo"
+                          autocapitalize="sentences">
                         <p class="err-space"></p>
                     </label>
                     <label>
                       <span class="span-input">Área Laboral</span>
-                        <input type="text" class="input-data input-AL">
+                        <input type="text" class="input-data input-AL"
+                        autocapitalize="sentences">
                         <p class="err-space"></p>
                     </label>
                     <label>
@@ -297,7 +299,7 @@
                       <input
                         class="input-data input-name-ref"
                         type="text" name="username"
-                        autocomplete="off">
+                        autocomplete="off" autocapitalize="words">
                       <p class="err-space"></p>
                   </label>
                   <label>
@@ -313,7 +315,7 @@
                       <input
                         class="input-data input-name-second-ref"
                         type="text" name="username"
-                        autocomplete="off">
+                        autocomplete="off" autocapitalize="words">
                       <p class="err-space"></p>
                   </label>
                   <label>
@@ -329,7 +331,7 @@
                       <input
                         class="input-data input-name-comercial"
                         type="text" name="username"
-                        autocomplete="off">
+                        autocomplete="off" autocapitalize="words">
                       <p class="err-space"></p>
                   </label>
                   <label>
@@ -345,7 +347,7 @@
                       <input
                         class="input-data input-name-second-ref-comer"
                         type="text" name="username"
-                        autocomplete="off">
+                        autocomplete="off" autocapitalize="words">
                       <p class="err-space"></p>
                   </label>
                   <label>
@@ -371,7 +373,7 @@
                   </label>
                   <label>
                     <span class="span-input">Dirección</span>
-                    <input class="input-data input-dir" type="text">
+                    <input class="input-data input-dir" type="text" autocapitalize="sentences">
                     <p class="err-space"></p>
                   </label>
                 </form>
@@ -392,12 +394,12 @@
                     <div class="input-pep1">
                       <label>
                         <span class="span-input">Entidad</span>
-                        <input class="input-data input-entidad" type="text">
+                        <input class="input-data input-entidad" type="text" autocapitalize="words">
                         <p class="err-space"></p>
                       </label>
                       <label>
                         <span class="span-input">Cargo público ocupado</span>
-                        <input class="input-data input-cargo" type="text">
+                        <input class="input-data input-cargo" type="text" autocapitalize="sentences">
                         <p class="err-space"></p>
                       </label>
                     </div>
@@ -418,12 +420,12 @@
                     <div class="input-pep2">
                       <label>
                         <span class="span-input">Entidad</span>
-                        <input class="input-data input-entidad-fam" type="text">
+                        <input class="input-data input-entidad-fam" type="text" autocapitalize="words">
                         <p class="err-space"></p>
                       </label>
                       <label>
                         <span class="span-input">Cargo público ocupado</span>
-                        <input class="input-data input-cargo-fam" type="text">
+                        <input class="input-data input-cargo-fam" type="text" autocapitalize="sentences">
                         <p class="err-space"></p>
                       </label>
                     </div>
