Redistribucion de Inputs

--- a/index.html
+++ b/index.html
@@ -237,20 +237,35 @@
                         <p class="err-space"></p>
                     </label>
                     <label>
+                      <span class="span-input">Correo Electrónico</span>
+                      <input
+                        type="text"
+                        class="input-data input-email">
+                      <p class="err-space"></p>
+                    </label>
+                    <label>
+                      <span class="span-input">Número de Celular</span>
+                      <input
+                        type="text"
+                        class="input-data input-phone"
+                        placeholder="09XXXXXXXX">
+                      <p class="err-space"></p>
+                    </label>
+                    <!-- <label>
                       <span class="span-input">Lugar de Trabajo</span>
                         <input
                           type="text"
                           class="input-data input-trabajo"
                           autocapitalize="sentences">
                         <p class="err-space"></p>
-                    </label>
-                    <label>
+                    </label> -->
+                    <!-- <label>
                       <span class="span-input">Área Laboral</span>
                         <input type="text" class="input-data input-AL"
                         autocapitalize="sentences">
                         <p class="err-space"></p>
-                    </label>
-                    <label>
+                    </label> -->
+                    <!-- <label>
                       <span class="span-input">Seleccione su Ocupación</span>
                         <div class="select-container">
                           <select class="select-ocupacion input-data" name="Ocupacion" id="">
@@ -260,7 +275,7 @@
                           </select>
                         </div>
                         <p class="err-space"></p>
-                    </label>
+                    </label> -->
                     <label>
                       <span class="span-input">Ingrese su Sueldo</span>
                         <input
@@ -280,19 +295,36 @@
 
                 <form class="form form-2" action="" autocomplete="off"  >
                   <label>
-                    <span class="span-input">Correo Electrónico</span>
-                    <input
-                      type="text"
-                      class="input-data input-email">
-                    <p class="err-space"></p>
+                    <span class="span-input">Seleccione su Ocupación</span>
+                      <div class="select-container">
+                        <select class="select-ocupacion input-data" name="Ocupacion" id="">
+                          <option value="" selected></option>
+                          <option class="selected" value="ejemplo1">ejemplo1</option>
+                          <option class="selected" value="ejemplo2">ejemplo2</option>
+                        </select>
+                      </div>
+                      <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Número de Celular</span>
-                    <input
-                      type="text"
-                      class="input-data input-phone"
-                      placeholder="09XXXXXXXX">
-                    <p class="err-space"></p>
+                    <span class="span-input">Área Laboral</span>
+                      <input type="text" class="input-data input-AL"
+                      autocapitalize="sentences">
+                      <p class="err-space"></p>
+                  </label>
+                  <label>
+                    <span class="span-input">Lugar de Trabajo</span>
+                      <input
+                        type="text"
+                        class="input-data input-trabajo"
+                        autocapitalize="sentences">
+                      <p class="err-space"></p>
+                  </label>
+                  <label>
+                    <span class="span-input">Ingrese su Sueldo</span>
+                      <input
+                        type="text"
+                        class="input-data input-ingresos">
+                      <p class="err-space"></p>
                   </label>
                   <label>
                     <span class="span-input">Nombres y Apellidos de la Referencia Personal</span>
