Se agrega una fecha nueva como input

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <div class="container-responsive">
               <span class="responsive-step">Informacion Personal</span>
-              <span class="responsive-step">Informacion de Contacto</span>
+              <span class="responsive-step">Informacion Laboral</span>
               <span class="responsive-step">Ubicación</span>
               <span class="responsive-step">Ocupación</span>
               <span class="responsive-step">Fotos</span>
@@ -39,7 +39,7 @@
               </div>
               <div class="step-container">
                 <div class="progress-step">2</div>
-                <p class="info-step">Informacion de contacto</p>
+                <p class="info-step">Informacion Laboral</p>
               </div>
               <div class="step-container">
                 <div class="progress-step">3</div>
@@ -232,6 +232,8 @@
                             <option value="" selected></option>
                             <option class="selected" value="Soltero">Soltero</option>
                             <option class="selected" value="Casado">Casado</option>
+                            <option class="selected" value="Divorciado">Divorciado</option>
+                            <option class="selected" value="Viudo">Viudo</option>
                         </select>
                         </div>
                         <p class="err-space"></p>
@@ -250,38 +252,6 @@
                         class="input-data input-phone"
                         placeholder="09XXXXXXXX">
                       <p class="err-space"></p>
-                    </label>
-                    <!-- <label>
-                      <span class="span-input">Lugar de Trabajo</span>
-                        <input
-                          type="text"
-                          class="input-data input-trabajo"
-                          autocapitalize="sentences">
-                        <p class="err-space"></p>
-                    </label> -->
-                    <!-- <label>
-                      <span class="span-input">Área Laboral</span>
-                        <input type="text" class="input-data input-AL"
-                        autocapitalize="sentences">
-                        <p class="err-space"></p>
-                    </label> -->
-                    <!-- <label>
-                      <span class="span-input">Seleccione su Ocupación</span>
-                        <div class="select-container">
-                          <select class="select-ocupacion input-data" name="Ocupacion" id="">
-                            <option value="" selected></option>
-                            <option class="selected" value="ejemplo1">ejemplo1</option>
-                            <option class="selected" value="ejemplo2">ejemplo2</option>
-                          </select>
-                        </div>
-                        <p class="err-space"></p>
-                    </label> -->
-                    <label>
-                      <span class="span-input">Ingrese su Sueldo</span>
-                        <input
-                          type="text"
-                          class="input-data input-ingresos">
-                        <p class="err-space"></p>
                     </label>
                     <label>
                       <span class="span-input">Ingrese el monto a solicitar</span>
@@ -324,6 +294,11 @@
                       <input
                         type="text"
                         class="input-data input-ingresos">
+                      <p class="err-space"></p>
+                  </label>
+                  <label>
+                    <span class="span-input">Ingrese su Fecha de Ingreso a la Empresa</span>
+                      <input type="date" class="input-data fecha-ingreso"><!--Cambio fecha input-->
                       <p class="err-space"></p>
                   </label>
                   <label>
