Cambios al form 2 en la validacion del numero de celular corporativo

--- a/index.html
+++ b/index.html
@@ -302,6 +302,11 @@
                       <p class="err-space"></p>
                   </label>
                   <label>
+                    <span class="span-input">Ingrese su numero de celular corporativo</span>
+                    <input type="text" class="input-data input-number-corp">
+                    <p class="err-space"></p>
+                  </label>
+                  <label>
                     <span class="span-input">Nombres y Apellidos de la Referencia Personal</span>
                       <input
                         class="input-data input-name-ref"
@@ -366,7 +371,7 @@
                     <p class="err-space"></p>
                   </label>
                 </form>
-<!--  -------------------------------fin del segundo formulario-------------------------------- -->
+<!--  -------------------------------Inicio tercer formulario-------------------------------- -->
 
                 <form class="form form-3" action="javascript:void(0);" autocomplete="off"  >
                   <label>
@@ -385,7 +390,7 @@
                   </label>
                 </form>
 
-<!-- -----------------------fin del tercer formulario----------------------------- -->
+<!-- -----------------------Inicio cuarto formulario----------------------------- -->
 
                 <form class="form form-4" action="" autocomplete="off"  >
                   <div class="pep-1">
