Se agregan mas apartados en el campo de ubicacion

--- a/index.html
+++ b/index.html
@@ -384,8 +384,23 @@
                     <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Dirección</span>
+                    <span class="span-input">Barrio</span>
                     <input class="input-data input-dir" type="text" autocapitalize="sentences">
+                    <p class="err-space"></p>
+                  </label>
+                  <label>
+                    <span class="span-input">Calle 1</span>
+                    <input class="input-data" type="text" autocapitalize="sentences">
+                    <p class="err-space"></p>
+                  </label>
+                  <label>
+                    <span class="span-input">Calle 2</span>
+                    <input class="input-data" type="text" autocapitalize="sentences">
+                    <p class="err-space"></p>
+                  </label>
+                  <label>
+                    <span class="span-input">Numero de casa</span>
+                    <input class="input-data" type="number" autocapitalize="sentences">
                     <p class="err-space"></p>
                   </label>
                 </form>
