Se agregan campos y validaciones al formulario de ubicaciones

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                     <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Nombre y Apellido de la Primera Referencia Comercial</span>
+                    <span class="span-input">Nombre y Apellido de la Referencia Comercial</span>
                       <input
                         class="input-data input-name-comercial"
                         type="text" name="username"
@@ -347,26 +347,10 @@
                       <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Numero de Celular de la Primera Referencia Comercial</span>
+                    <span class="span-input">Numero de Celular de la Referencia Comercial</span>
                     <input
                       type="text"
                       class="input-data input-ref-comer"
-                      placeholder="09XXXXXXXX">
-                    <p class="err-space"></p>
-                  </label>
-                  <label>
-                    <span class="span-input">Nombre y Apellido de la Segunda Referencia Comercial</span>
-                      <input
-                        class="input-data input-name-second-ref-comer"
-                        type="text" name="username"
-                        autocomplete="off" autocapitalize="words">
-                      <p class="err-space"></p>
-                  </label>
-                  <label>
-                    <span class="span-input">Numero de Celular de la Segunda Referencia Comercial</span>
-                    <input
-                      type="text"
-                      class="input-data input-second-ref-comer"
                       placeholder="09XXXXXXXX">
                     <p class="err-space"></p>
                   </label>
@@ -390,17 +374,17 @@
                   </label>
                   <label>
                     <span class="span-input">Calle 1</span>
-                    <input class="input-data" type="text" autocapitalize="sentences">
+                    <input class="input-data input-calle1" type="text" autocapitalize="sentences">
                     <p class="err-space"></p>
                   </label>
                   <label>
                     <span class="span-input">Calle 2</span>
-                    <input class="input-data" type="text" autocapitalize="sentences">
+                    <input class="input-data input-calle2" type="text" autocapitalize="sentences">
                     <p class="err-space"></p>
                   </label>
                   <label>
                     <span class="span-input">Numero de casa</span>
-                    <input class="input-data" type="number" autocapitalize="sentences">
+                    <input class="input-data numero-casa" type="text" autocapitalize="sentences">
                     <p class="err-space"></p>
                   </label>
                 </form>
