--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
                     <input type="text" class="input-data input-number-corp">
                     <p class="err-space"></p>
                   </label>
+                  <h2 class="titulo titulo-main">Referencias Personales</h2>
                   <label>
                     <span class="span-input">Nombres y Apellidos de la Referencia Personal</span>
                       <input
@@ -335,6 +336,7 @@
                       placeholder="09XXXXXXXX">
                     <p class="err-space"></p>
                   </label>
+                  <h2 class="titulo titulo-main">Referencia Comercial</h2>
                   <label>
                     <span class="span-input">Nombre y Apellido de la Referencia Comercial</span>
                       <input
