Se agregan contenidos faltantes en la seccion de confirmacion

--- a/index.html
+++ b/index.html
@@ -78,20 +78,13 @@
                 <p class="info-text">Estado Civil:</p>
                 <p class="info"></p>
               </div>
+
               <div class="info-section">
-                <p class="info-text">Lugar de Trabajo:</p>
+                <p class="info-text">Correo Electrónico:</p>
                 <p class="info"></p>
               </div>
               <div class="info-section">
-                <p class="info-text">Area de Laboral:</p>
-                <p class="info"></p>
-              </div>
-              <div class="info-section">
-                <p class="info-text">Ocupación:</p>
-                <p class="info"></p>
-              </div>
-              <div class="info-section">
-                <p class="info-text">Ingresos:</p>
+                <p class="info-text">Número de Celular:</p>
                 <p class="info"></p>
               </div>
             </div>
@@ -101,19 +94,47 @@
             </div>
             <div class="card-confirm">
               <div class="info-section">
-                <p class="info-text">Correo Electrónico:</p>
+                <p class="info-text">Ocupación:</p>
                 <p class="info"></p>
               </div>
               <div class="info-section">
-                <p class="info-text">Número de Celular:</p>
+                <p class="info-text">Area de Laboral:</p>
                 <p class="info"></p>
               </div>
               <div class="info-section">
-                <p class="info-text">Primera Referencia Personal:</p>
+                <p class="info-text">Lugar de Trabajo:</p>
                 <p class="info"></p>
               </div>
               <div class="info-section">
-                <p class="info-text">Segunda Referencia Personal:</p>
+                <p class="info-text">Ingresos:</p>
+                <p class="info"></p>
+              </div>
+              <div class="info-section">
+                <p class="info-text">Fecha de Ingreso a la Empresa:</p>
+                <p class="info"></p>
+              </div>
+              <div class="info-section">
+                <p class="info-text">Numero Corporativo:</p>
+                <p class="info"></p>
+              </div>
+              <div class="info-section">
+                <p class="info-text">Nombre de la Primera Referencia Personal:</p>
+                <p class="info"></p>
+              </div>
+              <div class="info-section">
+                <p class="info-text">Numero de la Primera Referencia Personal:</p>
+                <p class="info"></p>
+              </div>
+              <div class="info-section">
+                <p class="info-text">Nombre de la Segunda Referencia Personal:</p>
+                <p class="info"></p>
+              </div>
+              <div class="info-section">
+                <p class="info-text">Numero de la Segunda Referencia Personal:</p>
+                <p class="info"></p>
+              </div>
+              <div class="info-section">
+                <p class="info-text">Nombre de la Referencia Comercial:</p>
                 <p class="info"></p>
               </div>
               <div class="info-section">
@@ -126,14 +147,49 @@
               <h3>Ubicación</h3>
             </div>
             <div class="card-confirm">
+              <h4 class="titulo">Ubicacion Personal</h4>
               <div class="info-section">
                 <p class="info-text">Ciudad:</p>
                 <p class="info"></p>
               </div>
               <div class="info-section">
-                <p class="info-text">Dirección:</p>
+                <p class="info-text">Barrio:</p>
                 <p class="info"></p>
               </div>
+              <div class="info-section">
+                <p class="info-text">Calle 1:</p>
+                <p class="info"></p>
+              </div>
+              <div class="info-section">
+                <p class="info-text">Calle 2:</p>
+                <p class="info"></p>
+              </div>
+              <div class="info-section">
+                <p class="info-text">Numero de Casa:</p>
+                <p class="info"></p>
+              </div>
+              <h4 class="titulo">Ubicacion Laboral</h4>
+              <div class="info-section">
+                <p class="info-text">Ciudad:</p>
+                <p class="info"></p>
+              </div>
+              <div class="info-section">
+                <p class="info-text">Barrio:</p>
+                <p class="info"></p>
+              </div>
+              <div class="info-section">
+                <p class="info-text">Calle 1:</p>
+                <p class="info"></p>
+              </div>
+              <div class="info-section">
+                <p class="info-text">Calle 2:</p>
+                <p class="info"></p>
+              </div>
+              <div class="info-section">
+                <p class="info-text">Numero de Edificio:</p>
+                <p class="info"></p>
+              </div>
+
             </div>
 
             <div class="titulo titulo-confirm">
