Se utiliza un vinculo en el boton de confirmar

--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
               <button class="button button-atras">Atras</button>
               <button class="button button-volver">Volver</button>
               <button class="button-siguiente"><a href="#inicio" class="link link-disabled">Siguiente</a></button>
-              <button type="submit" class="button button-confirm">Confirmar</button>
+              <button type="reset" class="button button-confirm"><a href="#inicio" class="link-confirm">Confirmar</a></button>
             </div>
             <div class="datos-confirmados">
               <h2 class="titulo">¡Gracias por acceder a nuestros servicios!</h2>
