--- a/index.html
+++ b/index.html
@@ -545,23 +545,52 @@
                       <select class="input-data select-foto" name="array-list" id="select-disp"></select>
                     </div>
                   </div>
-                  <div class="card card-1">
-                    <img class="no-image no-image-1" src="./img/no-image.png" alt="no-image1">
-                    <canvas class="lienzo lienzo-1"></canvas>
-                    <p class="text-card">Imagen Frontal CI</p>
-                    <img class="delete-image delete-1" src="./img/red-x.webp" alt="delete1">
+                  <div class="navbar-fotos">
+                    <div class="seccion-fotos fotos-cedula seccion-activa"><p>Cedula</p></div>
+                    <div class="seccion-fotos fotos-Boleta">Boletas</div>
+                    <div class="seccion-fotos documento-domicilio">Documento Domicilio</div>
                   </div>
-                  <div class="card card-2">
-                    <img class="no-image no-image-2" src="./img/no-image.png" alt="no-image2">
-                    <canvas class="lienzo lienzo-2"></canvas>
-                    <p class="text-card">Imagen Dorso CI</p>
-                    <img class="delete-image delete-2" src="./img/red-x.webp" alt="delete2">
+                  <div class="fotos-seccion1">
+                    <div class="card card-1">
+                      <img class="no-image no-image-1" src="./img/no-image.png" alt="no-image1">
+                      <canvas class="lienzo lienzo-1"></canvas>
+                      <p class="text-card">Imagen Frontal CI</p>
+                      <img class="delete-image delete-1" src="./img/red-x.webp" alt="delete1">
+                    </div>
+                    <div class="card card-2">
+                      <img class="no-image no-image-2" src="./img/no-image.png" alt="no-image2">
+                      <canvas class="lienzo lienzo-2"></canvas>
+                      <p class="text-card">Imagen Dorso CI</p>
+                      <img class="delete-image delete-2" src="./img/red-x.webp" alt="delete2">
+                    </div>
+                    <div class="card card-3">
+                      <img class="no-image no-image-3" src="./img/no-image.png" alt="no-image3">
+                      <canvas class="lienzo lienzo-3"></canvas>
+                      <p class="text-card">Selfie</p>
+                      <img class="delete-image delete-3" src="./img/red-x.webp" alt="delete3">
+                    </div>
                   </div>
-                  <div class="card card-3">
-                    <img class="no-image no-image-3" src="./img/no-image.png" alt="no-image3">
-                    <canvas class="lienzo lienzo-3"></canvas>
-                    <p class="text-card">Selfie</p>
-                    <img class="delete-image delete-3" src="./img/red-x.webp" alt="delete3">
+                  <div class="fotos-seccion2">
+                    <div class="card card-1">
+                      <img class="no-image no-image-1" src="./img/no-image.png" alt="no-image1">
+                      <canvas class="lienzo lienzo-1"></canvas>
+                      <p class="text-card">Boleta IPS</p>
+                      <img class="delete-image delete-1" src="./img/red-x.webp" alt="delete1">
+                    </div>
+                    <div class="card card-2">
+                      <img class="no-image no-image-2" src="./img/no-image.png" alt="no-image2">
+                      <canvas class="lienzo lienzo-2"></canvas>
+                      <p class="text-card">Boleta de Salario</p>
+                      <img class="delete-image delete-2" src="./img/red-x.webp" alt="delete2">
+                    </div>
+                  </div>
+                  <div class="fotos-seccion3">
+                    <div class="card card-1">
+                      <img class="no-image no-image-1" src="./img/no-image.png" alt="no-image1">
+                      <canvas class="lienzo lienzo-1"></canvas>
+                      <p class="text-card">Documento Respaldatorio De Domicilio</p>
+                      <img class="delete-image delete-1" src="./img/red-x.webp" alt="delete1">
+                    </div>
                   </div>
                 </form>
 
