Se agregan cambios a los estilos y se prepara el form 5 para recibir mas documentos

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                         <p class="err-space err"></p>
                     </label>
                     <label>
-                      <span class="span-input">Numero de C.I</span>
+                      <span class="span-input">Número de C.I</span>
                         <input
                           class="input-data input-ci"
                           type="text" name="userci"
@@ -287,6 +287,7 @@
                             <option class="selected" value="Casado">Casado</option>
                             <option class="selected" value="Divorciado">Divorciado</option>
                             <option class="selected" value="Viudo">Viudo</option>
+                            <option class="selected" value="Concubinado">Concubinado</option>
                         </select>
                         </div>
                         <p class="err-space"></p>
@@ -343,20 +344,20 @@
                       <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Ingrese su Sueldo</span>
+                    <span class="span-input">Ingrese su Salario</span>
                       <input
                         type="text"
                         class="input-data input-ingresos">
                       <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Ingrese su Fecha de Ingreso a la Empresa</span>
+                    <span class="span-input">Introduzca su Fecha de Ingreso a la Empresa</span>
                       <input type="date" class="input-data fecha-ingreso"><!--Cambio fecha input-->
                       <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Ingrese su numero de celular corporativo</span>
-                    <input type="text" class="input-data input-number-corp">
+                    <span class="span-input">Ingrese su número de celular corporativo</span>
+                    <input type="text" class="input-data input-number-corp" placeholder="09XXXXXXXX">
                     <p class="err-space"></p>
                   </label>
                   <h2 class="titulo titulo-main">Referencias Personales</h2>
@@ -369,7 +370,7 @@
                       <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Numero de Celular de la Primera Referencia Personal</span>
+                    <span class="span-input">Número de Celular de la Primera Referencia Personal</span>
                     <input
                       type="text"
                       class="input-data input-first-ref"
@@ -385,7 +386,7 @@
                       <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Numero de Celular de la Segunda Referencia Personal</span>
+                    <span class="span-input">Número de Celular de la Segunda Referencia Personal</span>
                     <input
                       type="text"
                       class="input-data input-second-ref"
@@ -402,7 +403,7 @@
                       <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Numero de Celular de la Referencia Comercial</span>
+                    <span class="span-input">Número de Celular de la Referencia Comercial</span>
                     <input
                       type="text"
                       class="input-data input-ref-comer"
@@ -413,7 +414,7 @@
 <!--  -------------------------------Inicio tercer formulario-------------------------------- -->
 
                 <form class="form form-3" action="javascript:void(0);" autocomplete="off"  >
-                  <h2 class="titulo titulo-main">Ubicacion Personal</h2>
+                  <h2 class="titulo titulo-main">Ubicación Personal</h2>
                   <label>
                     <span class="span-input">Ciudad</span>
                     <div class="select-container">
@@ -439,12 +440,12 @@
                     <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Numero de casa</span>
+                    <span class="span-input">Número de casa</span>
                     <input class="input-data numero-casa" type="text" autocapitalize="sentences">
                     <p class="err-space"></p>
                   </label>
 
-                  <h2 class="titulo titulo-main">Ubicacion Laboral</h2>
+                  <h2 class="titulo titulo-main">Ubicación Laboral</h2>
 
                   <label>
                     <span class="span-input">Ciudad</span>
@@ -471,7 +472,7 @@
                     <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Numero de casa</span>
+                    <span class="span-input">Número de casa</span>
                     <input class="input-data numero-edificio-trabajo" type="text" autocapitalize="sentences">
                     <p class="err-space"></p>
                   </label>
